[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/Enemy_Behaviour.gd" type="Script" id=1]
[ext_resource path="res://scripts/LineDrawer.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=6]
radius = 0.6

[sub_resource type="PrismMesh" id=2]
size = Vector3( 1, 1, 2 )

[sub_resource type="PrismMesh" id=3]
size = Vector3( 1.8, 1.8, 2 )

[sub_resource type="VisualShaderNodeColorConstant" id=16]
constant = Color( 0.241251, 1, 0, 1 )

[sub_resource type="VisualShaderNodeVectorOp" id=17]
operator = 2

[sub_resource type="VisualShaderNodeInput" id=10]
input_name = "depth_texture"

[sub_resource type="VisualShaderNodeTexture" id=13]
output_port_for_preview = 0
source = 5

[sub_resource type="VisualShaderNodeScalarOp" id=14]
default_input_values = [ 0, 0.0, 1, 50.0 ]
operator = 2

[sub_resource type="VisualShaderNodeScalarOp" id=15]
default_input_values = [ 0, 0.0, 1, 49.0 ]
operator = 1

[sub_resource type="VisualShaderNodeInput" id=18]
input_name = "screen_uv"

[sub_resource type="VisualShader" id=8]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Color:10
	vec3 n_out10p0 = vec3(0.241251, 1.000000, 0.000000);
	float n_out10p1 = 1.000000;

// Input:8
	vec3 n_out8p0 = vec3(SCREEN_UV, 0.0);

// Input:3

// Texture:5
	vec3 n_out5p0;
	float n_out5p1;
	{
		vec4 DEPTH_TEXTURE_tex_read = texture(DEPTH_TEXTURE, n_out8p0.xy);
		n_out5p0 = DEPTH_TEXTURE_tex_read.rgb;
		n_out5p1 = DEPTH_TEXTURE_tex_read.a;
	}

// ScalarOp:6
	float n_in6p1 = 50.00000;
	float n_out6p0 = n_out5p1 * n_in6p1;

// ScalarOp:7
	float n_in7p1 = 49.00000;
	float n_out7p0 = n_out6p0 - n_in7p1;

// VectorOp:11
	vec3 n_out11p0 = n_out10p0 * vec3(n_out7p0);

// Output:0
	ALBEDO = n_out11p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -738.941, 14.2003 )
nodes/fragment/3/node = SubResource( 10 )
nodes/fragment/3/position = Vector2( -1000, 320 )
nodes/fragment/5/node = SubResource( 13 )
nodes/fragment/5/position = Vector2( -760, 220 )
nodes/fragment/6/node = SubResource( 14 )
nodes/fragment/6/position = Vector2( -600, 300 )
nodes/fragment/7/node = SubResource( 15 )
nodes/fragment/7/position = Vector2( -360, 240 )
nodes/fragment/8/node = SubResource( 18 )
nodes/fragment/8/position = Vector2( -1060, 180 )
nodes/fragment/10/node = SubResource( 16 )
nodes/fragment/10/position = Vector2( -169.983, 75.0298 )
nodes/fragment/11/node = SubResource( 17 )
nodes/fragment/11/position = Vector2( 60, 20 )
nodes/fragment/connections = PoolIntArray( 3, 0, 5, 2, 6, 0, 7, 0, 5, 1, 6, 0, 8, 0, 5, 0, 10, 0, 11, 0, 7, 0, 11, 1, 11, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
vertex_color_use_as_albedo = true

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.13 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("")
material/0 = null

[node name="Sight_Cone" type="MeshInstance" parent="."]
transform = Transform( 6.7, 0, 0, 0, -1.74846e-07, -0.01, 0, 4, -4.37114e-10, 0, -1, -3.4 )
visible = false
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = SubResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="LineDrawer" type="ImmediateGeometry" parent="."]
visible = false
material_override = SubResource( 5 )
cast_shadow = 0
script = ExtResource( 2 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.996195, 0.0871557, 0, -0.0871557, 0.996195, 0, -0.7, 0 )
visible = false
light_color = Color( 0.172549, 1, 0, 1 )
light_energy = 8.0
light_cull_mask = 4294967294
shadow_enabled = true
spot_range = 9.0
spot_attenuation = 0.000220032
spot_angle = 40.0
spot_angle_attenuation = 42688.9

[node name="SpotLight2" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.996195, 0.0871557, 0, -0.0871557, 0.996195, 0, -0.7, 0 )
light_energy = 2.0
light_specular = 0.0
light_cull_mask = 4294967294
shadow_enabled = true
spot_range = 9.0
spot_attenuation = 0.63728
spot_angle = 40.0
spot_angle_attenuation = 2.37841

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
